--- a/frontend/src/app/components/teacher-table/teacher-table.component.html
+++ b/frontend/src/app/components/teacher-table/teacher-table.component.html
@@ -6,7 +6,7 @@
   </div>
 </div>
 <div class="table-container">
-  <table id="#teacher-table">
+  <table id="teacher-table">
     <tr>
       <th>Name</th>
       <th>Staff ID</th>
@@ -18,10 +18,10 @@
       <td>{{teacher[0].name}}</td>
       <td>{{teacher[0].id}}</td>
       <td>{{2022 - teacher[0].age}}</td>
-      <td id="#teacher-edit-{{#teacher[0].id}}" (click)="editTeacher(#teacher[0].id)" style="text-align: center;">
+      <td id="teacher-edit-{{teacher[0].id}}" (click)="editTeacher(teacher[0].id)" style="text-align: center;">
         <fa-icon class="edit-icon" [icon]="faPenSquare"></fa-icon>
       </td>
-      <td id="#teacher-delete-{{#teacher[0].id}}" (click)="deleteTeacher(#teacher[0].id)"
+      <td id="teacher-delete-{{teacher[0].id}}" (click)="deleteTeacher(teacher[0].id)"
         style="text-align: center; color: #FC4F4F;">
         <fa-icon class="trash-icon" [icon]="faTrash"></fa-icon>
       </td>
